gcc/testsuite/algol68/compile/error-supper-2.a68
# { dg-options {-fstropping=supper} }  #

begin int foo__bar = 10; # { dg-error "unworthy" }  #
      skip
end
